--- a/Diferent Python Examples/Diferent Examples/pl_scrape.ipynb
+++ b/Diferent Python Examples/Diferent Examples/pl_scrape.ipynb
@@ -2370,7 +2370,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2386,7 +2386,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "5733c08055a0dcf1603cdb7253d9b013e11273e70fe53cabb709ddcf0fc9e6f4"
